Development Portal (2018-09-27 shi)
==============================
Add commas to result values
Logic for region code display
Update print-friendly css for new elements
Update all themes css


Development Portal (2018-09-26 shi)
==============================
Added activity-scope, region code and region vocab to import


Development Portal (2018-09-24 shi)
==============================
Update print-friendly css of search filters section


Development Portal (2018-09-22 shi)
==============================
Fix firefox dropdown background
Add description narrative to document-link in SAVi
Update all themes, including print-friendly


Development Portal (2018-09-21 shi)
==============================
Load original css in ctrack before scripts
Sticky headers for tables
Update all themes, including print-friendly
Minor css fixes, border-box, hover text, smaller td num font


Development Portal (2018-09-12 shi)
==============================
Remove list numbers from participating-org
Update print-friendly css
Update SAVi body margin for q


Development Portal (2018-08-24 shi)
==============================
Fix alert colspan
Display humanitarian flag in SAVi
Update all themes
Don't display empty comments/location/dimension in results for SAVi
Update print-friendly css
Update policy-marker code to show even if vocab is not set


Development Portal (2018-08-21 shi)
==============================
Fix word-break in sector / donor tables for long names in columns
Update sector/donor tables width and layout
Update print-friendly css


Development Portal (2018-08-16 shi)
==============================
Display document-date for document-link in SAVi
Updated print-friendly css
Updated all themes with new displays
Sort document-link by date


Development Portal (2018-07-03 shi)
==============================
Fix activity list header in Generator
Display new policy marker search dropdown
Update translations and typeahead css


Development Portal (2018-06-25 shi - full)