@@ -1,3 +1,9 @@
+Development Portal (2018-12-18 shi)
+==============================
+Minor css fix for search title
+Update print-friendly css
+
+
 Development Portal (2018-09-27 shi)
 ==============================
 Add commas to result values
